Form on mobile (fix)

--- a/Flexbox/assets/css/style.css
+++ b/Flexbox/assets/css/style.css
@@ -296,11 +296,8 @@ header nav li {
 }
 
 @media (max-width: 800px) {
-  .contact form input {
-    
-  }
-  .contact form .btn {
-    
+  .contact form {
+    width: 80%
   }
 }
 
